archive/__before_move/old/_very_old/linkerd/linkerd-jaeger/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkerd-jaeger-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    traefik.ingress.kubernetes.io/router.middlewares: networking-forwardauth-authelia@kubernetescrd
    hajimari.io/enable: 'true'
    hajimari.io/icon: chip
    hajimari.io/appName: Jaeger
spec:
  tls:
    - hosts:
        - jaeger.${SECRET_DOMAIN_ME}
      secretName: ${SECRET_DOMAIN_ME//./-}-tls
  rules:
    - host: jaeger.${SECRET_DOMAIN_ME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 16686
